Tests/project2/errors/semis2.flm
/* This tests for extra semicolons */

fun foo()
    begin
    bar(a, b, c) ; 
    a:= 2 + 3;
    bar(c, d, e);
    end


        
